# lim

./: .gitignore  CMakeLists.txt
source/common/: affine.hpp  common.hpp  module.hpp  string.cpp  string.hpp
source/kernel/: kernel.cpp  kernel.hpp
source/logger/: logger.cpp  logger.hpp
source/notify/: notify.cpp  notify.hpp
source/render/: render.cpp  render.hpp
source/script/: script.cpp  script.hpp
source/window/: window.cpp  window.hpp
